NetBSD Problem Report #32939

From lguillaume@berklee.edu  Mon Feb 27 03:32:33 2006
Return-Path: <lguillaume@berklee.edu>
Received: from smtp2.berklee.edu (smtp.berklee.edu [192.136.22.34])
	by narn.netbsd.org (Postfix) with ESMTP id B89FA63B863
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 27 Feb 2006 03:32:33 +0000 (UTC)
Message-Id: <200602270332.k1R3WRp8029912@shodo.berklee.net>
Date: Sun, 26 Feb 2006 22:32:27 -0500 (EST)
From: lguillaume@berklee.edu
Reply-To: lguillaume@berklee.edu
To: gnats-bugs@netbsd.org
Subject: Bug in xsrc - i830_driver.c 
X-Send-Pr-Version: 3.95

>Number:         32939
>Category:       xsrc
>Synopsis:       Intel i830 Driver problem
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    tron
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 27 03:35:00 +0000 2006
>Closed-Date:    Mon Feb 27 13:08:41 +0000 2006
>Last-Modified:  Wed Mar 01 16:20:04 +0000 2006
>Originator:     Louis Guillaume
>Release:        NetBSD 3.0_STABLE
>Organization:
>Environment:
System: NetBSD shodo.berklee.net 3.0_STABLE NetBSD 3.0_STABLE (GENERIC.MPACPI) #0: Thu Feb 23 16:44:58 EST 2006 louis@shodo.berklee.net:/usr/obj/sys/arch/i386/compile/GENERIC.MPACPI i386
Architecture: i386
Machine: i386
>Description:
On machines with Intel i830 Video Hardware, for example...

vga0 at pci0 dev 2 function 0: Intel 82915G/GL Integrated Graphics Device (rev. 0x04)

... X will only work with one mode: 640x480.
Please see this mailing list thread for more information:

http://www.mail-archive.com/xfree86@xfree86.org/msg18411.html

>How-To-Repeat:
Try to start X (installed from sets in the base distribution of NetBSD 3.0) on a machine with i830 hardware. Notice that there is only one mode: 640x480.

>Fix:
From David Dawes, also in thread referenced above...

--- i830_driver.c.orig	3 Mar 2005 18:06:26 -0000	1.64
+++ i830_driver.c	18 Mar 2005 03:12:37 -0000
@@ -2667,6 +2667,9 @@
                                  pI830->pipeDisplaySize[n].y2,
                                  60);

+   } else {
+        xf86SetMonitorParameters(pScrn, pScrn->monitor, 0, 0, 0);
+        xf86AddEDIDModes(pScrn, pScrn->monitor, 0);
    }

    /* By now, we should have had some monitor settings, but if not, we


... context is xsrc/xfree/xc/programs/Xserver/hw/xfree86/drivers/i810/i830_driver.c

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: xsrc-manager->tron
Responsible-Changed-By: tron@netbsd.org
Responsible-Changed-When: Mon, 27 Feb 2006 13:00:37 +0000
Responsible-Changed-Why:
I'll handle this PR.


From: Matthias Scheler <tron@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: PR/32939 CVS commit: xsrc/xfree/xc/programs/Xserver/hw/xfree86/drivers/i810
Date: Mon, 27 Feb 2006 13:00:42 +0000 (UTC)

 Module Name:	xsrc
 Committed By:	tron
 Date:		Mon Feb 27 13:00:42 UTC 2006

 Modified Files:
 	xsrc/xfree/xc/programs/Xserver/hw/xfree86/drivers/i810: i830_driver.c

 Log Message:
 Apply patch by David Dawes, member of the XFree86 project, which allows
 to use screen resolution larger than 640x480 with i830 chipsets.
 This fixes PR xsrc/32939 by Louis Guillaume.


 To generate a diff of this commit:
 cvs rdiff -r1.4 -r1.5 \
     xsrc/xfree/xc/programs/Xserver/hw/xfree86/drivers/i810/i830_driver.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tron@netbsd.org
State-Changed-When: Mon, 27 Feb 2006 13:08:41 +0000
State-Changed-Why:
I've committed the patch to the HEAD branch and requested a pullup into
the "netbsd-3" branch.

Thanks a lot for the bug report.


From: Jeff Rizzo <riz@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: PR/32939 CVS commit: [netbsd-3] xsrc/xfree/xc/programs/Xserver/hw/xfree86/drivers/i810
Date: Wed,  1 Mar 2006 16:18:04 +0000 (UTC)

 Module Name:	xsrc
 Committed By:	riz
 Date:		Wed Mar  1 16:18:04 UTC 2006

 Modified Files:
 	xsrc/xfree/xc/programs/Xserver/hw/xfree86/drivers/i810 [netbsd-3]:
 	    i830_driver.c

 Log Message:
 Pull up following revision(s) (requested by tron in ticket #1186):
 	xfree/xc/programs/Xserver/hw/xfree86/drivers/i810/i830_driver.c: revision 1.5
 Apply patch by David Dawes, member of the XFree86 project, which allows
 to use screen resolution larger than 640x480 with i830 chipsets.
 This fixes PR xsrc/32939 by Louis Guillaume.


 To generate a diff of this commit:
 cvs rdiff -r1.3.6.1 -r1.3.6.2 \
     xsrc/xfree/xc/programs/Xserver/hw/xfree86/drivers/i810/i830_driver.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.