Pull up following revision(s) (requested by tron in ticket #1186): 	xfree/xc/programs/Xserver/hw/xfree86/drivers/i810/i830_driver.c: revision 1.5 Apply patch by David Dawes, member of the XFree86 project, which allows to use screen resolution larger than 640x480 with i830 chipsets. This fixes PR xsrc/32939 by Louis Guillaume.